2010-10-20  John W. Eaton  <jwe@octave.org>

	* io/strread.m, optimization/sqp.m, plot/daspect.m,
	plot/pbaspect.m, plot/gnuplot_drawnow.m, plot/isocolors.m,
	plot/isonormals.m, plot/legend.m, plot/print.m,
	plot/private/__interp_cube__.m, plot/__fltk_print__.m,
	plot/__gnuplot_print__.m, plot/__print_parse_opts__.m,
	statistics/base/quantile.m: Style fixes.

2010-10-19  John W. Eaton  <jwe@octave.org>

	* strings/module.mk (strings_FCN_FILES): Include
	strings/untabify.m in the list.
	* strings/untabify.m: Escape { and } characters in docstring.

2010-10-19  Ben Abbott <bpabbott@mac.com>

	* strings/strjust.m: Add "untabify" and "strrep" to @seealso{} in the
	doc-string.

2010-10-18  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* general/gradient.m, linear-algebra/normest.m,	plot/__gnuplot_print__.m,
	plot/__print_parse_opts__.m, plot/daspect.m,
	plot/gnuplot_drawnow.m, plot/pbaspect.m, plot/print.m,
	signal/periodogram.m: Style fix, replace end by endfor.

2010-10-18  Marco Caliari <marco.caliari@univr.it>

	* polynomial/polyval.m: Use Horner's method.

2010-10-18  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Always use gnuplot to display images.
	* image/image.m: Delete references to image_viewer.
	* image/image_viewer.m: Delete obsolete function.
	* image/module.mk (image_FCN_FILES): Remove image/image_viewer.m
	from the list.

2010-10-18  Gunnar Farneback <gunnar@lysator.liu.se>

	* general/interp2.m: Fix input checks for cubic
	interpolation (bug #31352, part 1).

2010-10-18  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: Add examples to the docstring.

2010-10-18  John W. Eaton  <jwe@octave.org>

	* plot/private/__errplot__.m: Remove debugging statement from
	previous change.

2010-10-17  John W. Eaton  <jwe@octave.org>

	* miscellaneous/edit.m: Use version 3 in GPL notice.

	* @ftp/ascii.m, @ftp/binary.m, @ftp/cd.m, @ftp/close.m,
	@ftp/delete.m, @ftp/dir.m, @ftp/display.m, @ftp/ftp.m,
	@ftp/loadobj.m, @ftp/mget.m, @ftp/mkdir.m, @ftp/mput.m,